Fix z-index header issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -53,7 +53,7 @@ body {
     padding: 1rem 0;
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 1500;
 }
 
 .header .container {
